# fusion

./: .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierrc.json  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.husky/: commit-msg  pre-commit
.zed/: settings.json
apps/desktop/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  State.tsx  bindings.ts  index.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/2024-08-21-195943_initial/: up.sql
apps/desktop/src-tauri/migrations/2024-08-24-142642_initial/: down.sql  up.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  schema.rs
apps/desktop/src-tauri/src/commands/: game.rs
apps/desktop/src-tauri/src/common/: database.rs  error.rs  mod.rs  result.rs  worker.rs
apps/desktop/src-tauri/src/common/download/: mod.rs
apps/desktop/src-tauri/src/common/worker/: mod.rs
apps/desktop/src-tauri/src/downloads/: mod.rs
apps/desktop/src-tauri/src/managers/: config.rs  database.rs  download.rs  download_new.rs  game.rs  mod.rs
apps/desktop/src-tauri/src/models/: config.rs  download.rs  events.rs  game.rs  mod.rs  payloads.rs
apps/desktop/src-tauri/src/schemas/: config.rs
apps/desktop/src-tauri/src/storefronts/: epicgames.rs  itchio.rs  legacygames.rs  mod.rs  storefront.rs
apps/desktop/src-tauri/src/storefronts/epicgames/: conversions.rs  mod.rs  strategy.rs
apps/desktop/src-tauri/src/storefronts/epicgames/api/: endpoints.rs  mod.rs  services.rs
apps/desktop/src-tauri/src/storefronts/epicgames/api/models/: chunk.rs  download_plan.rs  json_manifest.rs  manifest.rs  mod.rs  requests.rs  responses.rs  utils.rs
apps/desktop/src-tauri/src/storefronts/epicgames/download/: download_plan.rs  mod.rs  strategy.rs
apps/desktop/src-tauri/src/storefronts/itchio/: conversions.rs  mod.rs  strategy.rs  utils.rs
apps/desktop/src-tauri/src/storefronts/itchio/api/: endpoints.rs  models.rs  services.rs
apps/desktop/src-tauri/src/storefronts/itchio/api/models/: mod.rs
apps/desktop/src-tauri/src/storefronts/legacygames/: conversions.rs  mod.rs  strategy.rs
apps/desktop/src-tauri/src/storefronts/legacygames/api/: endpoints.rs  models.rs  services.rs
apps/desktop/src-tauri/src/util/: file.rs  fs.rs  mod.rs  string.rs
apps/desktop/src-tauri/src/utils/: download.rs  file.rs  launch_target.rs  mod.rs
apps/desktop/src/components/: GameCard.tsx  GameContextMenu.tsx  Header.tsx  InstallDialog.tsx  Sidebar.tsx
apps/desktop/src/models/: pages.tsx  payloads.tsx  types.tsx
apps/desktop/src/routes/: Library.tsx  Retro.tsx
apps/desktop/src/routes/Downloads/: DownloadDetails.tsx  DownloadItem.tsx  Downloads.tsx
apps/desktop/src/routes/Settings/: GridItem.tsx  Settings.tsx
apps/desktop/src/routes/Settings/pages/: DownloadsSettings.tsx  GeneralSettings.tsx
apps/desktop/src/routes/Settings/pages/StorefrontsSettings/: GridItem.tsx  StorefrontsSettings.tsx
apps/desktop/src/services/: game.ts
apps/desktop/src/state/: GameContext.tsx
apps/desktop/src/util/: string.ts
apps/desktop/src/utils/: array.ts  string.ts
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  schema.rs
crates/database/src/models/: config.rs  game.rs  mod.rs
crates/epic_games/: Cargo.toml
crates/epic_games/src/: conversions.rs  lib.rs
crates/epic_games/src/api/: endpoints.rs  services.rs
crates/epic_games/src/api/models/: chunk.rs  json_manifest.rs  manifest.rs  utils.rs
crates/fusion/: Cargo.toml
crates/fusion/src/: main.rs  storefronts.rs
crates/fusion/src/path/: mod.rs
crates/fusion/src/ui/: root.rs
crates/fusion/src/ui/components/: game_card.rs  header.rs  install_modal.rs  mod.rs  sidebar.rs
crates/fusion/src/ui/pages/: library.rs  mod.rs
crates/gpui_tokio/: Cargo.toml
crates/gpui_tokio/src/: defer.rs  lib.rs
crates/itchio/: Cargo.toml
crates/itchio/src/: conversions.rs  lib.rs
crates/itchio/src/api/: endpoints.rs  mod.rs  services.rs
crates/itchio/src/api/models/: responses.rs
crates/legacy_games/: Cargo.toml
crates/legacy_games/src/: conversions.rs  lib.rs
crates/legacy_games/src/api/: endpoints.rs  mod.rs  services.rs
crates/legacy_games/src/api/models/: mod.rs  responses.rs
crates/myabandonware/: Cargo.toml
crates/myabandonware-scraper/: Cargo.toml
crates/myabandonware-scraper/src/: models.rs  tests.rs
crates/myabandonware-scraper/src/scraper/: game.rs
crates/myabandonware/src/: lib.rs  models.rs  routes.rs  tests.rs
crates/myabandonware/src/scraper/: game.rs  mod.rs  search.rs
crates/scraper-myabandonware/: Cargo.toml
crates/scraper-myabandonware/src/: routes.rs  tests.rs
crates/scraper-myabandonware/src/scraper/: game.rs  search.rs
crates/storefront/: Cargo.toml
crates/storefront/src/: lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: assets.rs  context.rs  lib.rs  theme.rs  traits.rs
crates/ui/src/components/: badge.rs  button.rs  dialog.rs  label.rs  mod.rs  modal.rs
crates/ui/src/components/tabs/: mod.rs  tab.rs  tab_bar.rs
crates/ui/src/primitives/: layout.rs  mod.rs  span.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/wrapper-epicgames/: Cargo.toml
crates/wrapper-epicgames/src/: lib.rs  tests.rs
crates/wrapper-epicgames/src/api/: endpoints.rs  models.rs
crates/wrapper-epicgames/src/api/models/: chunk.rs  manifest.rs  mod.rs
crates/wrapper-itchio/: Cargo.toml
crates/wrapper-itchio/src/: lib.rs  tests.rs
crates/wrapper-itchio/src/api/: endpoints.rs  models.rs
crates/wrapper-legacygames/: Cargo.toml
crates/wrapper-legacygames/src/: lib.rs  result.rs  tests.rs
crates/wrapper-legacygames/src/api/: endpoints.rs  models.rs
migrations/2025-06-11-144130_initial/: down.sql  up.sql
