[workspace]
members = [
    "crates/assets",
    "crates/database",
    "crates/epic_games",
    "crates/fusion",
    "crates/gpui_tokio",
    "crates/itchio",
    "crates/legacy_games",
    "crates/storefront",
    "crates/ui",
    "crates/worker",
]
default-members = ["crates/fusion"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
assets = { path = "crates/assets" }
async-trait = "0.1.88"
chrono = "0.4.41"
database = { path = "crates/database" }
epic_games = { path = "crates/epic_games" }
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
fusion = { path = "crates/fusion" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_tokio = { path = "crates/gpui_tokio" }
itchio = { path = "crates/itchio" }
legacy_games = { path = "crates/legacy_games" }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
storefront = { path = "crates/storefront" }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
ui = { path = "crates/ui" }
worker = { path = "crates/worker" }
