[package]
name = "epic_games"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byteorder = "1.5.0"
chrono.workspace = true
const-hex = "1.14"
database.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
sha1.workspace = true
storefront.workspace = true
tokio.workspace = true
tokio-util.workspace = true
worker.workspace = true
