[package]
name = "fusion"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "fusion"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
assets.workspace = true
async-trait.workspace = true
database.workspace = true
dirs = "6.0.0"
gpui.workspace = true
gpui_tokio.workspace = true
legacy_games.workspace = true
storefront.workspace = true
strum.workspace = true
tokio.workspace = true
ui.workspace = true
