[package]
name = "myabandonware-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
reqwest = "0.12.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
