[package]
name = "wrapper-epicgames"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Pardo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
serde_urlencoded = "0.7"
futures = "0.3.31"
