[package]
name = "wrapper-legacygames"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Pardo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
base64 = "0.22.1"
