[package]
name = "fusion"
version = "0.0.0"
description = "One for all game launcher."
authors = ["Jorge Pardo"]
edition = "2024"

[lib]
name = "fusion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2.2.6"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2"
diesel-derive-enum = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
rayon = "1.10.0"
md-5 = "0.10.6"
async-trait = "0.1.87"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio-util = "0.7.15"
tokio-mpmc = "0.1"
chrono = "0.4"
serde_urlencoded = "0.7"
byteorder = "1.5.0"
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
sha1 = "0.10.6"
const-hex = "1.14"
whirlwind = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
